# tensorlakehouse-openeo-driver

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Containerfile  Containerfile_base  README.md  dev_requirements.txt  logging.conf  mypy.ini  podman-compose.yaml  podman-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: CODESTYLEGUIDE.md  CONTRIBUTING.md  SUPPORT.md
.github/workflows/: build_container.yaml  pylint.yaml  python-app.yaml
deployments/helm/: Chart.yaml  collection.json  create_kind_cluster.sh  deploy_to_kind.sh  init_stac.sh  kind.yaml  values-kind.yaml
deployments/helm/templates/: dask_deployment.yaml  dask_serivce.yaml  ingress.yaml  openeo_deployment.yaml  openeo_route.yaml  openeo_secret.yaml  openeo_service.yaml  pgstac_deployment.yaml  pgstac_fastapi_deployment.yaml  pgstac_fastapi_service.yaml  pgstacpostgis_deployment.yaml  pgstacpostgis_service.yaml  stac_explorer_deployment.yaml  stac_explorer_route.yaml  stac_explorer_service.yaml  stac_fastapi_deployment.yaml  stac_fastapi_route.yaml  stac_fastapi_service.yaml
docs/: metadata-schema.md  software-arch.md  userguide.md
tensorlakehouse_openeo_driver/: _openeo_tester.py  batch_jobs.py  catalog.py  catalog.py.orig  celeryconfig.py  celeryconfig.py.orig  conftest.py  constants.py  constants.py.orig  cos_parser.py  cos_parser.py.orig  datacube_variable.py  dataset.py  dimension.py  driver_data_cube.py  dummy_backend.py  geodn_backend.py  geodn_config.py  geodn_discovery.py  geodn_process_registry.py  geospatial_utils.py  get_openeo_process_implementations.py  get_process_implementations.py  get_specs.py  gunicorn.conf.py  item_property.py  layer.py  load_collection.py  local_app.py  local_app.py.orig  module.py  processes.py  processes.py.orig  processing.py  raster_files.py  run_gunicorn.sh  save_result.py  stac.py  stac.py.orig  tasks.py  (+19 more)
tensorlakehouse_openeo_driver/complex_module/: core.py
tensorlakehouse_openeo_driver/complex_module/tests/: test_core.py
tensorlakehouse_openeo_driver/config/: geodn_config.py
tensorlakehouse_openeo_driver/examples/: openid_connect.py
tensorlakehouse_openeo_driver/file_reader/: cloud_storage_file_reader.py  cog_file_reader.py  cos_parser.py  grib2_file_reader.py  netcdf_file_reader.py  raster_file_reader.py  standard_file_reader.py  zarr_file_reader.py
tensorlakehouse_openeo_driver/headless/: headless.ipynb  headless.py
tensorlakehouse_openeo_driver/headless/examples/: cos_performance_test.env  cos_performance_test.ipynb  headless_openeo.ipynb  raw_stacstack_from_cos.credentials.template  raw_stacstack_from_cos.env  raw_stacstack_from_cos.ipynb
tensorlakehouse_openeo_driver/model/: datacube_variable.py  dimension.py  item.py  item_property.py
tensorlakehouse_openeo_driver/output/: 20231228T142722-job-id.nc
tensorlakehouse_openeo_driver/pipeline/: kfpclient.py  postgres_conn.py
tensorlakehouse_openeo_driver/pipeline/handler/: abstract_sentinel_handler.py  handler_factory.py  hls_pipeline_handler.py  pipeline_handler.py  sentinel_1_pipeline_handler.py  sentinel_2_pipeline_handler_l1c.py  sentinel_2_pipeline_handler_l2a.py
tensorlakehouse_openeo_driver/process_implementations/: load_collection.py  load_collection.py.orig  load_collection_hbase.py  property_processes.py
tensorlakehouse_openeo_driver/s3_connections/: cog_file_reader.py  cos_parser.py  s3_file_reader.py  zarr_file_reader.py
tensorlakehouse_openeo_driver/stac/: rest.py  stac.py  stac_utils.py
tensorlakehouse_openeo_driver/tests/: conftest.py  constants.py  setup_certificates.py  utils.py
tensorlakehouse_openeo_driver/tests/end_to_end/: _openeo_tester.py  end-to-end-tests.sh  test_catalog.py  test_catalog.py.orig  test_load_datacube.py  test_views.py  test_views.py.orig
tensorlakehouse_openeo_driver/tests/integration/: integration_test_util.py  integration_tests.sh  test_auth.py  test_catalog.py  test_catalog.py.orig  test_cos_parser.py  test_dataservice.py  test_geodn_backend.py  test_geodn_discovery.py  test_processes.py  test_processes.py.orig  test_save_result.py  test_stac.py  test_views.py  test_views.py.orig
tensorlakehouse_openeo_driver/tests/schemas/: collection.json
tensorlakehouse_openeo_driver/tests/schemas/datacube/: schema.json
tensorlakehouse_openeo_driver/tests/unit/: test_catalog.py  test_geospatial_utils.py  test_grib2_file_reader.py  test_load_collection.py  test_local_connection.py  test_netcdf_file_reader.py  test_processes.py  test_standard_file_reader.py  test_views.py  test_views.py.orig  test_views_geodn.py  test_views_geodn.py.orig  test_zarr_file_reader.py  unit_test_util.py  unit_tests_data.py
tensorlakehouse_openeo_driver/tests/unit/unit_test_data/: test_post_result_23100f202f2b46999fdd1cbc3ae53903.nc
tensorlakehouse_openeo_driver/tests/unit_test_data/: example.grib.5b7b6.idx  no_time_dim_data_.nc  test_extra_dim.grib2
tensorlakehouse_openeo_driver/util/: auth_test.py  credentials_manager.py  object_storage_util.py  raster_files.py
tutorials/: ERA5-COS.ipynb  ERA5-hbase.ipynb  HLSS30.ipynb  local_connection.ipynb  raw_stacstack_from_cos.env  raw_stacstack_from_cos.ipynb  tutorial_requirements.txt
tutorials/examples/: openid_connect.py
tutorials/headless/examples/: cos_performance_test.env  cos_performance_test.ipynb  headless_openeo.ipynb
tutorials/test_data/: test_openeo_Globalweather-ERA5-.nc
