# configuration approach followed:
# - whenever possible, prefer pyproject.toml
# - for configurations insufficiently supported by pyproject.toml, use setup.cfg instead
# - setup.py discouraged; minimal stub included only for compatibility with legacy tools

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorlakehouse_openeo_driver"
description = "TensorLakehouse backend implementation of the OpenEO API"
authors = [
    { name = "Leonardo Tizzei", email = "ltizzei@br.ibm.com" },
    { name = "Norman Bobroff", email = "bobroff@ibm.com" },
    { name = "Romeo Kienzler", email = "romeo.kienzler1@ibm.com" },
]
readme = "README.md"
# due to how PEP 440 defines version matching, prefer [incl, excl) definitions like below:
requires-python = ">=3.9, <3.12"
dependencies = ["click"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "pep8-naming",
    "mypy",
    "sphinx",
    "sphinx-autodoc-typehints",
    "better-apidoc",
    "six",
    "sphinx_rtd_theme",
    "myst-parser",
]

[tool.setuptools_scm]
version_scheme = "post-release"

[project.scripts]
salutation = "openeo_geodn_driver.complex_module.core:formal_introduction"

[project.urls]
repository = "https://github.com/IBM/tensorlakehouse-openeo-driver"

[tool.semantic_release]
# for default values check:
# https://github.com/relekang/python-semantic-release/blob/master/semantic_release/defaults.cfg

version_source = "0.0.1"
branch = "main"

# configure types which should trigger minor and patch version bumps respectively
# (note that they must be a subset of the configured allowed types):
parser_angular_allowed_types = "build,chore,ci,docs,feat,fix,perf,style,refactor,test"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf"

# unstaging the changelog (i.e. command part before &&) is a workaround for
# https://github.com/relekang/python-semantic-release/issues/381:
build_command = "git restore --staged CHANGELOG.md && python -m build"

github_token_var="GITHUB_TOKEN"

upload_to_pypi = false

hvcs_domain="github.ibm.com"
hvcs_api_domain="github.ibm.com/api/v3"  # see https://ibm-analytics.slack.com/archives/C3SSJ6CSE/p1660313562338669?thread_ts=1660300230.162449&cid=C3SSJ6CSE

[tool.black]
line-length = 88
skip-string-normalization = false
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_to_top = ["rdkit", "scikit-learn"]

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.setuptools]
py-modules = []